k8s/04-backend-deployment.yaml
# value: http://136.115.177.14

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: wms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ajaykumara/backend-wms-app:9981131
          imagePullPolicy: Always
          ports:
            - containerPort:  5000

          volumeMounts:
            - name: uploads
              mountPath: /app/uploads

      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: backend-uploads-pvc
