k8s/11-cloudflared-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
  namespace: wms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:latest
          args:
            - tunnel
            - run
          volumeMounts:
            - name: creds
              mountPath: /etc/cloudflared/credentials.json
              subPath: credentials.json
            - name: config
              mountPath: /etc/cloudflared/config.yaml
              subPath: config.yaml
      volumes:
        - name: creds
          secret:
            secretName: cloudflared-credentials
        - name: config
          secret:
            secretName: cloudflared-config
