k8s/05-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: wms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ajaykumara/backend-wms-app:3b34d72
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: backend-uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: wms
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 5000
