k8s/07-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wms-route
  namespace: wms
spec:
  parentRefs:
    - name: wms-gateway
      namespace: wms
      sectionName: https
  hostnames:
    - "app.datanetwork.online"
  rules:
    - matches:
        - path: { type: Exact, value: /health }
      backendRefs:
        - name: backend
          port: 80
    - matches:
        - path: { type: PathPrefix, value: /api }
      backendRefs:
        - name: backend
          port: 80
    - matches:
        - path: { type: PathPrefix, value: /uploads }
      backendRefs:
        - name: backend
          port: 80
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: frontend
          port: 80
